.github/release: add bugs fixed category

--- a/.github/release.yml
+++ b/.github/release.yml
@@ -3,6 +3,9 @@ changelog:
     - title: New features
       labels:
         - "new feature"
+    - title: Bugs fixed
+      labels:
+        - "bug"
     - title: Other Changes
       labels:
         - "*"
