.github: add job to check docker build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,6 +60,7 @@ jobs:
             projects/03app_dotbot_gateway/Output/Release/Exe/03app_dotbot_gateway.elf,
             projects/03app_dotbot_gateway/Output/Release/Exe/03app_dotbot_gateway.hex"
           token: ${{ secrets.RELEASE_TOKEN }}
+
   style:
     runs-on: ubuntu-latest
     steps:
@@ -67,3 +68,11 @@ jobs:
         uses: actions/checkout@v2
       - name: Check style
         run: make check-format
+
+  docker:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v2
+      - name: Build docker image
+        run: docker build -t dotbot .
