--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,21 +18,11 @@ jobs:
         run: make docker
       - name: Build for release and convert elf artifacts to hex
         run: DOCKER_TARGETS="artifacts" BUILD_CONFIG=Release make docker
-      - name: Release
-        uses: ncipollo/release-action@v1
-        if: >-
-          github.event_name == 'push' &&
-          startsWith(github.event.ref, 'refs/tags')
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
         with:
-          generateReleaseNotes: true
-          artifacts: "
-            projects/03app_dotbot/Output/Release/Exe/03app_dotbot.elf,
-            projects/03app_dotbot/Output/Release/Exe/03app_dotbot.hex,
-            projects/03app_sailbot/Output/Release/Exe/03app_sailbot.elf,
-            projects/03app_sailbot/Output/Release/Exe/03app_sailbot.hex,
-            projects/03app_dotbot_gateway/Output/Release/Exe/03app_dotbot_gateway.elf,
-            projects/03app_dotbot_gateway/Output/Release/Exe/03app_dotbot_gateway.hex"
-          token: ${{ secrets.RELEASE_TOKEN }}
+          name: artifacts
+          path: artifacts/*
 
   style:
     runs-on: ubuntu-latest
@@ -49,3 +39,24 @@ jobs:
         uses: actions/checkout@v2
       - name: Build docker image
         run: docker build -t dotbot .
+
+  release:
+    runs-on: ubuntu-latest
+    needs: [docker, style, build]
+    if: >-
+      github.event_name == 'push' &&
+      startsWith(github.event.ref, 'refs/tags')
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v2
+      - name: Download artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: artifacts
+          path: ./artifacts
+      - name: Release
+        uses: ncipollo/release-action@v1
+        with:
+          generateReleaseNotes: true
+          artifacts: "artifacts/*"
+          token: ${{ secrets.RELEASE_TOKEN }}
