--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,18 +14,18 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        target: ["nrf52833", "nrf5340-app", "nrf5340-net"]
+        target: ["dotbot-v1", "nrf52833dk", "nrf52840dk", "nrf5340dk-app", "nrf5340dk-net", "sailbot-v1"]
         config: ["Debug", "Release"]
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
       - name: Build projects
-        run: NRF_TARGET=${{ matrix.target }} BUILD_CONFIG=${{ matrix.config }} make docker
+        run: BUILD_TARGET=${{ matrix.target }} BUILD_CONFIG=${{ matrix.config }} make docker
       - name: Build for release and convert elf artifacts to hex
         if: matrix.target == 'nrf52833' && matrix.config == 'Release'
-        run: NRF_TARGET=${{ matrix.target }} DOCKER_TARGETS="artifacts" BUILD_CONFIG=${{ matrix.config }} make docker
+        run: BUILD_TARGET=${{ matrix.target }} DOCKER_TARGETS="artifacts" BUILD_CONFIG=${{ matrix.config }} make docker
       - name: Upload artifact
-        if: matrix.target == 'nrf52833' && matrix.config == 'Release'
+        if: contains(fromJSON('["dotbot-v1", "nrf52833dk", "nrf52840dk", "sailbot-v1"]'), matrix.target) && matrix.config == 'Release'
         uses: actions/upload-artifact@v3
         with:
           name: artifacts
