--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,14 @@ jobs:
           name: artifacts
           path: artifacts/*
 
+  build-success:
+    # this is only run if all builds succeeded
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+    - name: build succeeded
+      run: exit 0
+
   style:
     runs-on: ubuntu-latest
     steps:
@@ -49,7 +57,7 @@ jobs:
 
   release:
     runs-on: ubuntu-latest
-    needs: [docker, style, build]
+    needs: [docker, style, build-success]
     if: >-
       github.event_name == 'push' &&
       startsWith(github.event.ref, 'refs/tags')
