.github: fix path to sphinx requirements.txt

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Install Doxygen
         run: sudo apt-get install -y doxygen graphviz
       - name: Install Sphinx
-        run: python -m pip install -r docs/sphinx/requirements.txt
+        run: python -m pip install -r doc/sphinx/requirements.txt
       - name: Build documentation
         run: make doc
 
