--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,9 +1,12 @@
 version: 2
 
 build:
-  os: "ubuntu-22.04"
+  os: ubuntu-22.04
   tools:
     python: "3.12"
+  apt_packages:
+    - doxygen
+    - graphviz
 
 sphinx:
   configuration: doc/sphinx/source/conf.py
