--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,6 +76,11 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
+      - name: Download DotBot v1 artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: artifacts-dotbot-v1
+          path: ./artifacts
       - name: Download DotBot v2 artifacts
         uses: actions/download-artifact@v4
         with:
